--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/express": "^5.0.0",
     "nodemon": "^3.1.9",
     "prisma": "^6.4.1",
