--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.24.1",
     "@tailwindcss/vite": "^4.0.9",
     "axios": "^1.8.1",
+    "dotenv": "^16.4.7",
     "gsap": "^3.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-router": "^7.2.0",
     "tailwindcss": "^4.0.9",
     "zod": "^3.24.2"
